Archive2/65/d53331318e02ee/output
main.cpp:1:9: warning: #pragma once in main file [enabled by default]
 #pragma once
         ^
main.cpp:3:10: error: #include expects "FILENAME" or <FILENAME>
 #include 'IKontext.h'
          ^
main.cpp:7:1: error: expected class-name before '{' token
 {
 ^
main.cpp:9:17: error: 'string' is not a member of 'std'
     std::vector<std::string> matice;
                 ^
main.cpp:9:17: error: 'string' is not a member of 'std'
main.cpp:9:28: error: template argument 1 is invalid
     std::vector<std::string> matice;
                            ^
main.cpp:9:28: error: template argument 2 is invalid
